--- a/templates/users.html.twig
+++ b/templates/users.html.twig
@@ -43,10 +43,10 @@
 								</div>
 								<div class="col"> {# <!-- ========= sex ========= --> #}
     								<div class="btn-group btn-group-toggle" data-toggle="buttons">
-    									<label class="btn btn-secondary">
+    									<label class="btn btn-outline-secondary">
     										<input type="radio" name="sex" id="sex_female" autocomplete="off" value="F"> {% trans %}Female{% endtrans %}
     									</label>
-    									<label class="btn btn-secondary">
+    									<label class="btn btn-outline-secondary">
     										<input type="radio" name="sex" id="sex_male" autocomplete="off" value="M"> {% trans %}Male{% endtrans %}
     									</label>
     								</div>
