--- a/templates/club.html.twig
+++ b/templates/club.html.twig
@@ -3,42 +3,61 @@
 
 {% block dashboardcontent %}
 
-	<div class="row p-3">
-    	<button type="button" class="btn btn-primary" id="btn-modify">
-    	    <span data-feather="edit-2"></span>
-    	    {% trans %}Modify{% endtrans %}
-    	</button>
-    	<button type="button" class="btn btn-secondary" id="btn-cancel" style="display: none;">
-    	    <span data-feather="x"></span>
-    	    {% trans %}Cancel{% endtrans %}
-    	</button>
-    </div>
-	
-	<form id="student_form" action="/api/club/{{ club.uuid }}" method="POST" class="needs-validation" novalidate>
-        <div class="row"> {# form-group #}
-            <label for="staticName" class="col-sm-2 col-form-label"><strong>{% trans %}Name{% endtrans %}</strong></label>
-            <div class="col-sm-10">
-            	<input type="text" readonly class="form-control-plaintext" id="staticName" value="{{ club.name | default('') }}">
-        	</div>
-        </div>
-        <div class="row"> {# form-group #}
-            <label for="staticWebsite" class="col-sm-2 col-form-label"><strong>{% trans %}Web site{% endtrans %}</strong></label>
-            <div class="col-sm-10">
-            	<input type="text" readonly class="form-control-plaintext" id="staticWebsite" value="{{ club.website_url | default('') }}">
-        	</div>
-        </div>
-        <div class="row"> {# form-group #}
-            <label for="staticFacebook" class="col-sm-2 col-form-label"><strong>{% trans %}Facebook page{% endtrans %}</strong></label>
-            <div class="col-sm-10">
-            	<input type="text" readonly class="form-control-plaintext" id="staticFacebook" value="{{ club.facebook | default('') }}">
-        	</div>
-        </div>
-        <div class="row p-3">
-        	<button id="submitUpdate" type="button" class="btn btn-primary" style="display: none;">
-        	    <span data-feather="save"></span>
-    	        {% trans %}Save{% endtrans %}
-        	</button>
-        </div>
-	</form>
 
+	<ul class="nav nav-tabs" id="myTab" role="tablist">
+		<li class="nav-item">
+			<a class="nav-link active" id="clubinfo-tab" data-toggle="tab" href="#clubinfo" role="tab" aria-controls="clubinfo" aria-selected="true">{% trans %}Information{% endtrans %}</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" id="addresses-tab" data-toggle="tab" href="#addresses" role="tab" aria-controls="addresses" aria-selected="false">{% trans %}Addresses{% endtrans %}</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" id="schedule-tab" data-toggle="tab" href="#schedule" role="tab" aria-controls="schedule" aria-selected="false">{% trans %}Schedule{% endtrans %}</a>
+		</li>
+	</ul>
+	<div class="tab-content" id="myTabContent">
+		<div class="tab-pane fade show active" id="clubinfo" role="tabpanel" aria-labelledby="clubinfo-tab">
+
+			<div class="row p-3">
+				<button type="button" class="btn btn-primary" id="btn-modify">
+					<span data-feather="edit-2"></span>
+					{% trans %}Modify{% endtrans %}
+				</button>
+				<button type="button" class="btn btn-secondary" id="btn-cancel" style="display: none;">
+					<span data-feather="x"></span>
+					{% trans %}Cancel{% endtrans %}
+				</button>
+			</div>
+			
+			<form id="student_form" action="/api/club/{{ club.uuid }}" method="POST" class="needs-validation" novalidate>
+				<div class="row"> {# form-group #}
+					<label for="staticName" class="col-sm-2 col-form-label"><strong>{% trans %}Name{% endtrans %}</strong></label>
+					<div class="col-sm-10">
+						<input type="text" readonly class="form-control-plaintext" id="staticName" value="{{ club.name | default('') }}">
+					</div>
+				</div>
+				<div class="row"> {# form-group #}
+					<label for="staticWebsite" class="col-sm-2 col-form-label"><strong>{% trans %}Web site{% endtrans %}</strong></label>
+					<div class="col-sm-10">
+						<input type="text" readonly class="form-control-plaintext" id="staticWebsite" value="{{ club.website_url | default('') }}">
+					</div>
+				</div>
+				<div class="row"> {# form-group #}
+					<label for="staticFacebook" class="col-sm-2 col-form-label"><strong>{% trans %}Facebook page{% endtrans %}</strong></label>
+					<div class="col-sm-10">
+						<input type="text" readonly class="form-control-plaintext" id="staticFacebook" value="{{ club.facebook | default('') }}">
+					</div>
+				</div>
+				<div class="row p-3">
+					<button id="submitUpdate" type="button" class="btn btn-primary" style="display: none;">
+						<span data-feather="save"></span>
+						{% trans %}Save{% endtrans %}
+					</button>
+				</div>
+			</form>
+		</div>
+		<div class="tab-pane fade" id="addresses" role="tabpanel" aria-labelledby="addresses-tab">addresses TODO</div>
+		<div class="tab-pane fade" id="schedule" role="tabpanel" aria-labelledby="schedule-tab">schedule TODO</div>
+	</div>
+	
 {% endblock %}
