--- a/templates/user.html.twig
+++ b/templates/user.html.twig
@@ -100,7 +100,7 @@
 				<div class="row">
 					<label for="staticPhoneEmergency" class="col-sm-2 col-form-label"><strong>{% trans %}Phone emergency{% endtrans %}</strong></label>
 					<div class="col-sm-10">
-						<input type="text" readonly class="form-control-plaintext" id="staticPhoneEmergency" value="{{ user.city | default('') }}">
+						<input type="text" readonly class="form-control-plaintext" id="staticPhoneEmergency" value="{{ user.phone_emergency | default('') }}">
 					</div>
 				</div>
 				<div class="row">
