--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -102,7 +102,7 @@
 			});
 		});
 	</script>
-	<script src="/vendor/jquery.serializeobject/jquery.serializeObject.min.js"></script>
+	<script src="/vendor/jquery.serializeobject/jquery.serializeObject.js"></script>
 	<script src="/assets/dashboard/dashboard.js"></script>
 {% endblock %}
 
