--- a/templates/user.html.twig
+++ b/templates/user.html.twig
@@ -3,6 +3,7 @@
 
 {% block stylesheets2 %}
 	<link href="/vendor/bootstrap-datepicker/bootstrap-datepicker.css" rel="stylesheet">
+	<link href="/assets/user/user.css" rel="stylesheet">
 {% endblock %}
 
 
@@ -12,132 +13,158 @@
 		<li class="nav-item">
 			<a class="nav-link active" id="contactinfo-tab" data-toggle="tab" href="#contactinfo" role="tab" aria-controls="contactinfo" aria-selected="true">{% trans %}Information{% endtrans %}</a>
 		</li>
-		<li class="nav-item">
-			<a class="nav-link" id="access-tab" data-toggle="tab" href="#access" role="tab" aria-controls="access" aria-selected="false">{% trans %}Access & roles{% endtrans %}</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" id="modifhst-tab" data-toggle="tab" href="#modifhst" role="tab" aria-controls="modifhst" aria-selected="false">{% trans %}Modifications{% endtrans %}</a>
-		</li>
+		{% if is_granted('ROLE_CLUB_MANAGER') %}
+    		<li class="nav-item">
+    			<a class="nav-link" id="access-tab" data-toggle="tab" href="#access" role="tab" aria-controls="access" aria-selected="false">{% trans %}Access & roles{% endtrans %}</a>
+    		</li>
+    	{% endif %}
+    	{% if is_granted('ROLE_TEACHER') %}
+    		<li class="nav-item">
+    			<a class="nav-link" id="modifhst-tab" data-toggle="tab" href="#modifhst" role="tab" aria-controls="modifhst" aria-selected="false">{% trans %}Modifications{% endtrans %}</a>
+    		</li>
+    	{% endif %}
 	</ul>
+    
 	<div class="tab-content" id="myTabContent">
 		<div class="tab-pane fade show active" id="contactinfo" role="tabpanel" aria-labelledby="contactinfo-tab">
-			<div class="row p-3">
-				<div class="col" align="left">
-    				<button type="button" class="btn btn-primary" id="btn-modify-top-info">
-    					<span data-feather="edit-2"></span>
-    					{% trans %}Modify{% endtrans %}
-    				</button>
-    				<button type="button" class="btn btn-secondary" id="btn-cancel-top-info" style="display: none;">
-    					<span data-feather="x"></span>
-    					{% trans %}Cancel{% endtrans %}
-    				</button>
-				</div>
-				<div class="col" align="right">
-					<button id="submitUpdate-top-info" type="button" class="btn btn-primary" style="display: none;">
-						<span data-feather="save"></span>
-						{% trans %}Save{% endtrans %}
-					</button>
-				</div>
-			</div>
 			
-			<form id="user_form-info" action="/api/user/{{ user.uuid }}" method="POST" class="needs-validation" novalidate>
+			<form id="user_form-info" action="/api/user/{{ user.uuid }}" method="PUT" class="needs-validation" novalidate>
+				{% if is_granted('ROLE_CLUB_MANAGER') %}
+    				<div class="row p-3">
+    					<div class="col" align="left">
+    	    				<button type="button" class="btn btn-primary" id="btn-modify-top-info">
+    	    					<span data-feather="edit-2"></span>
+    	    					{% trans %}Modify{% endtrans %}
+    	    				</button>
+    	    				<button type="button" class="btn btn-secondary" id="btn-cancel-top-info" style="display: none;">
+    	    					<span data-feather="x"></span>
+    	    					{% trans %}Cancel{% endtrans %}
+    	    				</button>
+    					</div>
+    					<div class="col" align="right">
+    						<button id="submitUpdate-top-info" type="button" class="btn btn-primary" style="display: none;">
+    							<span data-feather="save"></span>
+    							{% trans %}Save{% endtrans %}
+    						</button>
+    					</div>
+					</div>
+				{% endif %}
+				
 				<div class="row"> {# form-group #}
 					<label for="staticLastname" class="col-sm-2 col-form-label"><strong>{% trans %}Lastname{% endtrans %}</strong></label>
 					<div class="col-sm-10">
-						<input type="text" readonly class="form-control-plaintext" id="staticLastname" value="{{ user.lastname | default('') }}">
+						<input type="text" name="lastname" readonly class="form-control-plaintext" id="staticLastname" value="{{ user.lastname | default('') }}" data-previous="{{ user.lastname | default('') }}">
+						<div class="invalid-feedback"></div>
 					</div>
 				</div>
 				<div class="row">
 					<label for="staticFirstname" class="col-sm-2 col-form-label"><strong>{% trans %}Firstname{% endtrans %}</strong></label>
 					<div class="col-sm-10">
-						<input type="text" readonly class="form-control-plaintext" id="staticFirstname" value="{{ user.firstname | default('') }}">
+						<input type="text" name="firstname" readonly class="form-control-plaintext" id="staticFirstname" value="{{ user.firstname | default('') }}" data-previous="{{ user.firstname | default('') }}">
+						<div class="invalid-feedback"></div>
 					</div>
 				</div>
 				<div class="row">
 					<label for="staticBirthday" class="col-sm-2 col-form-label"><strong>{% trans %}Birthday{% endtrans %}</strong></label>
 					<div class="col-sm-10">
-						<input type="text" readonly class="form-control-plaintext" id="staticBirthday" value="{{ user.birthday.date_fr | default('') }}">
+						<input type="text" name="birthday" readonly class="form-control-plaintext" id="staticBirthday" value="{{ user.birthday.date_fr | default('') }}" data-previous="{{ user.birthday.date_fr | default('') }}">
+						<div class="invalid-feedback"></div>
 					</div>
 				</div>
 				<div class="row">
 					<label for="staticSex" class="col-sm-2 col-form-label"><strong>{% trans %}Sex{% endtrans %}</strong></label>
 					<div class="col-sm-10">
-						{#<input type="text" readonly class="form-control-plaintext" id="staticSex" value="{{ user.sex | default('') }}">#}
 						<div class="btn-group btn-group-toggle disabled" data-toggle="buttons">
-							<label class="btn btn-outline-secondary {% if user.sex == 'F' %}active{%  endif %}">
+							<label class="btn btn-outline-secondary disabled {% if user.sex == 'F' %}active btn-disabled-active{%  endif %}" data-previous="{{ user.sex == 'F' }}">
 								<input type="radio" name="sex" id="sex_female" autocomplete="off" value="F"> {% trans %}Female{% endtrans %}
 							</label>
-							<label class="btn btn-outline-secondary {% if user.sex == 'M' %}active{%  endif %}">
+							<label class="btn btn-outline-secondary disabled {% if user.sex == 'M' %}active btn-disabled-active{%  endif %}" data-previous="{{ user.sex == 'M' }}">
 								<input type="radio" name="sex" id="sex_male" autocomplete="off" value="M"> {% trans %}Male{% endtrans %}
 							</label>
 						</div>
+						<div class="invalid-feedback"></div>
 					</div>
 				</div>
 				<div class="row">
 					<label for="staticAddress" class="col-sm-2 col-form-label"><strong>{% trans %}Address{% endtrans %}</strong></label>
 					<div class="col-sm-10">
-						<input type="text" readonly class="form-control-plaintext" id="staticAddress" value="{{ user.address | default('') }}">
+						<input type="text" name="address" readonly class="form-control-plaintext" id="staticAddress" value="{{ user.address | default('') }}" data-previous="{{ user.address | default('') }}">
+						<div class="invalid-feedback"></div>
 					</div>
 				</div>
 				<div class="row">
 					<label for="staticZipcode" class="col-sm-2 col-form-label"><strong>{% trans %}Zipcode{% endtrans %}</strong></label>
 					<div class="col-sm-10">
-						<input type="text" readonly class="form-control-plaintext" id="staticZipcode" value="{{ user.zipcode | default('') }}">
+						<input type="text" name="zipcode" readonly class="form-control-plaintext" id="staticZipcode" value="{{ user.zipcode | default('') }}" data-previous="{{ user.zipcode | default('') }}">
+						<div class="invalid-feedback"></div>
 					</div>
 				</div>
 				<div class="row">
 					<label for="staticCity" class="col-sm-2 col-form-label"><strong>{% trans %}City{% endtrans %}</strong></label>
 					<div class="col-sm-10">
-						<input type="text" readonly class="form-control-plaintext" id="staticCity" value="{{ user.city | default('') }}">
+						<input type="text" name="city" readonly class="form-control-plaintext" id="staticCity" value="{{ user.city | default('') }}" data-previous="{{ user.city | default('') }}">
+						<div class="invalid-feedback"></div>
 					</div>
 				</div>
 				<div class="row">
 					<label for="staticPhone" class="col-sm-2 col-form-label"><strong>{% trans %}Phone{% endtrans %}</strong></label>
 					<div class="col-sm-10">
-						<input type="text" readonly class="form-control-plaintext" id="staticPhone" value="{{ user.phone | default('') }}">
+						<input type="text" name="phone" readonly class="form-control-plaintext" id="staticPhone" value="{{ user.phone | default('') }}" data-previous="{{ user.phone | default('') }}">
+						<div class="invalid-feedback"></div>
 					</div>
 				</div>
 				<div class="row">
 					<label for="staticPhoneEmergency" class="col-sm-2 col-form-label"><strong>{% trans %}Phone emergency{% endtrans %}</strong></label>
 					<div class="col-sm-10">
-						<input type="text" readonly class="form-control-plaintext" id="staticPhoneEmergency" value="{{ user.phone_emergency | default('') }}">
+						<input type="text" name="phone_emergency" readonly class="form-control-plaintext" id="staticPhoneEmergency" value="{{ user.phone_emergency | default('') }}" data-previous="{{ user.phone_emergency | default('') }}">
+						<div class="invalid-feedback"></div>
 					</div>
 				</div>
 				<div class="row">
 					<label for="staticNationality" class="col-sm-2 col-form-label"><strong>{% trans %}Nationality{% endtrans %}</strong></label>
 					<div class="col-sm-10">
-						<input type="text" readonly class="form-control-plaintext" id="staticNationality" value="{{ user.nationality | default('') }}">
+						<input type="text" name="nationality" readonly class="form-control-plaintext" id="staticNationality" value="{{ user.nationality | default('') }}" data-previous="{{ user.nationality | default('') }}">
+						<div class="invalid-feedback"></div>
 					</div>
 				</div>
 				<div class="row">
 					<label for="staticMails" class="col-sm-2 col-form-label"><strong>{% trans %}Mails{% endtrans %}</strong></label>
 					<div class="col-sm-10">
-						<input type="text" readonly class="form-control-plaintext" id="staticMails" value="{{ user.mails | default('') }}">
+						<input type="text" name="mails" readonly class="form-control-plaintext" id="staticMails" value="{{ user.mails | default('') }}" data-previous="{{ user.mails | default('') }}">
+						<div class="invalid-feedback"></div>
 					</div>
 				</div>
-    			<div class="row p-3">
-    				<div class="col" align="left">
-        				<button type="button" class="btn btn-primary" id="btn-modify-bottom-info">
-        					<span data-feather="edit-2"></span>
-        					{% trans %}Modify{% endtrans %}
-        				</button>
-        				<button type="button" class="btn btn-secondary" id="btn-cancel-bottom-info" style="display: none;">
-        					<span data-feather="x"></span>
-        					{% trans %}Cancel{% endtrans %}
-        				</button>
-    				</div>
-    				<div class="col" align="right">
-    					<button id="submitUpdate-bottom-info" type="button" class="btn btn-primary" style="display: none;">
-    						<span data-feather="save"></span>
-    						{% trans %}Save{% endtrans %}
-    					</button>
-    				</div>
-    			</div>
+				{% if is_granted('ROLE_CLUB_MANAGER') %}
+        			<div class="row p-3">
+        				<div class="col" align="left">
+            				<button type="button" class="btn btn-primary" id="btn-modify-bottom-info">
+            					<span data-feather="edit-2"></span>
+            					{% trans %}Modify{% endtrans %}
+            				</button>
+            				<button type="button" class="btn btn-secondary" id="btn-cancel-bottom-info" style="display: none;">
+            					<span data-feather="x"></span>
+            					{% trans %}Cancel{% endtrans %}
+            				</button>
+        				</div>
+        				<div class="col" align="right">
+        					<button id="submitUpdate-bottom-info" type="button" class="btn btn-primary" style="display: none;">
+        						<span data-feather="save"></span>
+        						{% trans %}Save{% endtrans %}
+        					</button>
+        				</div>
+        			</div>
+    			{% endif %}
 			</form>
 
 		</div>
-		<div class="tab-pane fade" id="access" role="tabpanel" aria-labelledby="access-tab">access TODO</div>
-		<div class="tab-pane fade" id="modifhst" role="tabpanel" aria-labelledby="modifhst-tab">modif TODO</div>
+		
+		{% if is_granted('ROLE_CLUB_MANAGER') %}
+			<div class="tab-pane fade" id="access" role="tabpanel" aria-labelledby="access-tab">access TODO</div>
+		{% endif %}
+		
+		{% if is_granted('ROLE_TEACHER') %}
+			<div class="tab-pane fade" id="modifhst" role="tabpanel" aria-labelledby="modifhst-tab">modif TODO</div>
+		{% endif %}
 	</div>
 
 {% endblock %}
@@ -146,24 +173,26 @@
 
 {% block javascriptsafter1 %}
 	<script src="/vendor/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
-	<script src="/vendor/bootstrap-datepicker/locales/bootstrap-datepicker.fr.min.js" charset="UTF-8"></script>
-	<script type="text/javascript">
-		{#
-		// https://uxsolutions.github.io/bootstrap-datepicker/?markup=input&format=&weekStart=&startDate=&endDate=&startView=0&minViewMode=0&maxViewMode=4&todayBtn=false&clearBtn=false&language=fr&orientation=auto&multidate=&multidateSeparator=&calendarWeeks=on&keyboardNavigation=on&forceParse=on#sandbox
-		#}
-		var maxDate = new Date();
-		maxDate.setFullYear(maxDate.getFullYear() - 2);
-		var minDate = new Date();
-		minDate.setFullYear(minDate.getFullYear() - 100);
-		var startDate = new Date();
-		startDate.setFullYear(startDate.getFullYear() - 10);
-		$('#staticBirthday').datepicker({
-			startDate: minDate,
-			endDate: maxDate,
-			defaultViewDate: startDate,
-			language: 'fr',
-			calendarWeeks: true
-		});
-	</script>
+	{% if is_granted('ROLE_CLUB_MANAGER') %}
+    	<script src="/vendor/bootstrap-datepicker/locales/bootstrap-datepicker.fr.min.js" charset="UTF-8"></script>
+    	<script type="text/javascript">
+    		{#
+    		// https://uxsolutions.github.io/bootstrap-datepicker/?markup=input&format=&weekStart=&startDate=&endDate=&startView=0&minViewMode=0&maxViewMode=4&todayBtn=false&clearBtn=false&language=fr&orientation=auto&multidate=&multidateSeparator=&calendarWeeks=on&keyboardNavigation=on&forceParse=on#sandbox
+    		#}
+    		var maxDate = new Date();
+    		maxDate.setFullYear(maxDate.getFullYear() - 2);
+    		var minDate = new Date();
+    		minDate.setFullYear(minDate.getFullYear() - 100);
+    		var startDate = new Date();
+    		startDate.setFullYear(startDate.getFullYear() - 10);
+    		$('#staticBirthday').datepicker({
+    			startDate: minDate,
+    			endDate: maxDate,
+    			defaultViewDate: startDate,
+    			language: 'fr',
+    			calendarWeeks: true
+    		});
+    	</script>
+    {% endif %}
 	<script src="/assets/user/user.js"></script>
 {% endblock %}
