--- a/templates/users.html.twig
+++ b/templates/users.html.twig
@@ -9,7 +9,7 @@
 
 {% block dashboardcontent %}
 
-	{% if is_granted('ROLE_TEACHER') %}
+	{% if is_granted('ROLE_CLUB_MANAGER') %}
 		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createStudentModal">{% trans %}Add{% endtrans %}</button>
 
 		<div class="modal fade" id="createStudentModal" tabindex="-1" role="dialog" aria-labelledby="createStudentModalLabel" aria-hidden="true">
