--- a/templates/user.html.twig
+++ b/templates/user.html.twig
@@ -3,7 +3,7 @@
 
 {% block stylesheets2 %}
 	<link href="/vendor/bootstrap-datepicker/bootstrap-datepicker.css" rel="stylesheet">
-	<link href="/assets/user/user.css" rel="stylesheet">
+	<link href="/assets/utils/form.css" rel="stylesheet">
 {% endblock %}
 
 
