--- a/public_html/assets/users/users.css
+++ b/public_html/assets/users/users.css
@@ -1,3 +1,38 @@
 .clickable tr {
 	cursor: pointer;
 }
+
+.table-col-sex {
+	width: 16px;
+	padding-left: 0px !important;
+	padding-right: 0px !important;
+}
+
+@media (max-width: 620px) {
+	.table-col2 {
+		display: none;
+	}
+}
+
+@media (max-width: 850px) {
+	.table-col3 {
+		display: none;
+	}
+}
+
+@media (max-width: 1000px) {
+	.table-col4 {
+		display: none;
+	}
+}
+
+@media (max-width: 1200px) {
+	.table-col5 {
+		display: none;
+	}
+}
+@media (max-width: 1400px) {
+	.table-col6 {
+		display: none;
+	}
+}
