--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,7 +1,9 @@
 {% extends 'dashboard.html.twig' %}
 
 {% block dashboardcontent %}
-				
+
+TODO
+{#				
 <h1 class="h2">Dashboard</h1>
 <div class="btn-toolbar mb-2 mb-md-0">
 	<div class="btn-group mr-2">
@@ -13,5 +15,6 @@
 		This week
 	</button>
 </div>
+#}
 
 {% endblock %}
