--- a/templates/emails/viewEmailList.html.twig
+++ b/templates/emails/viewEmailList.html.twig
@@ -8,7 +8,7 @@
 	<span>List all emails :</span>
 	<ul>
 		{% for emailType in emailTypes %}
-			<li><a href="/email/{{ emailType }}">{{ emailType }}</a></li>
+			<li><a href="/debug/email/{{ emailType }}">{{ emailType }}</a></li>
 		{% endfor %}
 	</ul>
 
