password renewal (save)

--- a/templates/security/forgot-password-renewal-updated.html.twig
+++ b/templates/security/forgot-password-renewal-updated.html.twig
@@ -3,7 +3,7 @@
 {% block dashboardcontent %}
 
 	<div class="text-center" style="width: 20rem; margin: 0 auto;">
-		<p>{% trans %}Mail maybe sent. Check your mailbox{% endtrans %}</p>
+		updated !
 	</div>
 	
 {% endblock %}
