--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,36 +2,38 @@
 
 {% block dashboardcontent %}
 
-<div class="text-center" style="width: 20rem; margin: 0 auto;">
-    <form method="post">
-    	{% if error %}
-    		<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    	{% endif %}
-    
-    	{% if app.user %}
-    		<div class="checkbox mb-3">{% trans %}You are logged in as{% endtrans %} {{ app.user.username }}, <a href="{{ path('app_logout') }}">{% trans %}Logout{% endtrans %}</a>
-    	{% endif %}
-    
-    	<h1 class="h3 mb-3 font-weight-normal">{% trans %}Please sign in{% endtrans %}</h1>
-    	<label for="inputLogin" class="sr-only">{% trans %}Login{% endtrans %}</label>
-    	<input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" placeholder="{% trans %}Login{% endtrans %}" required autofocus>
-    	<label for="inputPassword" class="sr-only">{% trans %}Password{% endtrans %}</label>
-    	<input type="password" name="password" id="inputPassword" class="form-control" placeholder="{% trans %}Password{% endtrans %}" required>
-    
-    	<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" >
-    
-    	{#Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-    	See https://symfony.com/doc/current/security/remember_me.html#}
-    
-    	<div class="checkbox mb-3">
-    		<label>
-    			<input type="checkbox" name="_remember_me">{% trans %}Remember me{% endtrans %}
-    		</label>
-    	</div>
-    
-    
-    	<button class="btn btn-lg btn-primary" type="submit">{% trans %}Sign in{% endtrans %}</button>
-    </form>
+	<div class="text-center" style="width: 20rem; margin: 0 auto;">
+		<form method="post">
+			{% if error %}
+				<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+			{% endif %}
 
-</div>
+			{% if app.user %}
+				<div class="checkbox mb-3">{% trans %}You are logged in as{% endtrans %} {{ app.user.username }}, <a href="{{ path('app_logout') }}">{% trans %}Logout{% endtrans %}</a>
+			{% endif %}
+
+			<h1 class="h3 mb-3 font-weight-normal">{% trans %}Please sign in{% endtrans %}</h1>
+			<label for="inputLogin" class="sr-only">{% trans %}Login{% endtrans %}</label>
+			<input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" placeholder="{% trans %}Login{% endtrans %}" required autofocus>
+			<label for="inputPassword" class="sr-only">{% trans %}Password{% endtrans %}</label>
+			<input type="password" name="password" id="inputPassword" class="form-control" placeholder="{% trans %}Password{% endtrans %}" required>
+
+			<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" >
+
+			{#Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+			See https://symfony.com/doc/current/security/remember_me.html#}
+
+			<div class="checkbox mb-3 mt-3">
+				<label>
+					<input type="checkbox" name="_remember_me">&nbsp;{% trans %}Remember me{% endtrans %}
+				</label>
+			</div>
+
+			<button class="btn btn-lg btn-primary" type="submit">{% trans %}Sign in{% endtrans %}</button>
+		</form>
+		<div class="checkbox mt-4">
+			<a href="/user/pwd/request">{% trans %}Forgot my password ?{% endtrans %}</a>
+		</div>
+	</div>
+	
 {% endblock %}
