--- a/templates/emails/base.html.twig
+++ b/templates/emails/base.html.twig
@@ -1,6 +1,11 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<style type="text/css">
+			body {
+				font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+			}
+		</style>
 		{% block stylesheets %}{% endblock %}
 	</head>
 	<body>
