--- a/templates/security/forgot-password.html.twig
+++ b/templates/security/forgot-password.html.twig
@@ -9,12 +9,10 @@
 			<label for="inputLogin" class="sr-only">{% trans %}Login{% endtrans %}</label>
 			<input type="text" value="" name="login" id="inputLogin" class="form-control" placeholder="{% trans %}Login{% endtrans %}" required autofocus>
 			<input type="hidden" name="_csrf_token" value="{{ csrf_token('forgot-password') }}" >
-			<div class="checkbox mb-3">
-				<label>
-					<input type="checkbox" name="_remember_me">{% trans %}Remember me{% endtrans %}
-				</label>
+			<div class="mt-3">
+				<button class="btn btn-lg btn-primary" type="submit">{% trans %}Send me{% endtrans %}</button>
 			</div>
-			<button class="btn btn-lg btn-primary" type="submit">{% trans %}Send me{% endtrans %}</button>
+			
 		</form>
 	</div>
 	
