prepare club addresses form

--- a/templates/user/user.html.twig
+++ b/templates/user/user.html.twig
@@ -14,39 +14,41 @@
 			<a class="nav-link active" id="contactinfo-tab" data-toggle="tab" href="#contactinfo" role="tab" aria-controls="contactinfo" aria-selected="true">{% trans %}Information{% endtrans %}</a>
 		</li>
 		{% if is_granted('ROLE_CLUB_MANAGER') %}
-    		<li class="nav-item">
-    			<a class="nav-link" id="access-tab" data-toggle="tab" href="#access" role="tab" aria-controls="access" aria-selected="false">{% trans %}Access & roles{% endtrans %}</a>
-    		</li>
-    	{% endif %}
-    	{% if is_granted('ROLE_TEACHER') %}
-    		<li class="nav-item">
-    			<a class="nav-link" id="modifhst-tab" data-toggle="tab" href="#modifhst" role="tab" aria-controls="modifhst" aria-selected="false">{% trans %}Modifications{% endtrans %}</a>
-    		</li>
-    	{% endif %}
+			<li class="nav-item">
+				<a class="nav-link" id="access-tab" data-toggle="tab" href="#access" role="tab" aria-controls="access" aria-selected="false">{% trans %}Access & roles{% endtrans %}</a>
+			</li>
+		{% endif %}
+		{% if is_granted('ROLE_TEACHER') %}
+			<li class="nav-item">
+				<a class="nav-link" id="modifhst-tab" data-toggle="tab" href="#modifhst" role="tab" aria-controls="modifhst" aria-selected="false">{% trans %}Modifications{% endtrans %}</a>
+			</li>
+		{% endif %}
 	</ul>
-    
+	
 	<div class="tab-content" id="myTabContent">
+
+
 		<div class="tab-pane fade show active" id="contactinfo" role="tabpanel" aria-labelledby="contactinfo-tab">
 			
 			<form id="user_form-info" action="/api/user/{{ user.uuid }}" method="PUT" class="needs-validation" novalidate>
 				{% if is_granted('ROLE_CLUB_MANAGER') %}
-    				<div class="row p-3">
-    					<div class="col" align="left">
-    	    				<button type="button" class="btn btn-primary" id="btn-modify-top-info">
-    	    					<span data-feather="edit-2"></span>
-    	    					{% trans %}Modify{% endtrans %}
-    	    				</button>
-    	    				<button type="button" class="btn btn-secondary" id="btn-cancel-top-info" style="display: none;">
-    	    					<span data-feather="x"></span>
-    	    					{% trans %}Cancel{% endtrans %}
-    	    				</button>
-    					</div>
-    					<div class="col" align="right">
-    						<button id="submitUpdate-top-info" type="button" class="btn btn-primary" style="display: none;">
-    							<span data-feather="save"></span>
-    							{% trans %}Save{% endtrans %}
-    						</button>
-    					</div>
+					<div class="row p-3">
+						<div class="col" align="left">
+							<button type="button" class="btn btn-primary" id="btn-modify-top-info">
+								<span data-feather="edit-2"></span>
+								{% trans %}Modify{% endtrans %}
+							</button>
+							<button type="button" class="btn btn-secondary" id="btn-cancel-top-info" style="display: none;">
+								<span data-feather="x"></span>
+								{% trans %}Cancel{% endtrans %}
+							</button>
+						</div>
+						<div class="col" align="right">
+							<button id="submitUpdate-top-info" type="button" class="btn btn-primary" style="display: none;">
+								<span data-feather="save"></span>
+								{% trans %}Save{% endtrans %}
+							</button>
+						</div>
 					</div>
 				{% endif %}
 				
@@ -135,31 +137,35 @@
 					</div>
 				</div>
 				{% if is_granted('ROLE_CLUB_MANAGER') %}
-        			<div class="row p-3">
-        				<div class="col" align="left">
-            				<button type="button" class="btn btn-primary" id="btn-modify-bottom-info">
-            					<span data-feather="edit-2"></span>
-            					{% trans %}Modify{% endtrans %}
-            				</button>
-            				<button type="button" class="btn btn-secondary" id="btn-cancel-bottom-info" style="display: none;">
-            					<span data-feather="x"></span>
-            					{% trans %}Cancel{% endtrans %}
-            				</button>
-        				</div>
-        				<div class="col" align="right">
-        					<button id="submitUpdate-bottom-info" type="button" class="btn btn-primary" style="display: none;">
-        						<span data-feather="save"></span>
-        						{% trans %}Save{% endtrans %}
-        					</button>
-        				</div>
-        			</div>
-    			{% endif %}
+					<div class="row p-3">
+						<div class="col" align="left">
+							<button type="button" class="btn btn-primary" id="btn-modify-bottom-info">
+								<span data-feather="edit-2"></span>
+								{% trans %}Modify{% endtrans %}
+							</button>
+							<button type="button" class="btn btn-secondary" id="btn-cancel-bottom-info" style="display: none;">
+								<span data-feather="x"></span>
+								{% trans %}Cancel{% endtrans %}
+							</button>
+						</div>
+						<div class="col" align="right">
+							<button id="submitUpdate-bottom-info" type="button" class="btn btn-primary" style="display: none;">
+								<span data-feather="save"></span>
+								{% trans %}Save{% endtrans %}
+							</button>
+						</div>
+					</div>
+				{% endif %}
 			</form>
 
 		</div>
 		
 		{% if is_granted('ROLE_CLUB_MANAGER') %}
-			<div class="tab-pane fade" id="access" role="tabpanel" aria-labelledby="access-tab">access TODO</div>
+			<div class="tab-pane fade" id="access" role="tabpanel" aria-labelledby="access-tab">
+				access TODO
+				
+				
+			</div>
 		{% endif %}
 		
 		{% if is_granted('ROLE_TEACHER') %}
@@ -174,25 +180,25 @@
 {% block javascriptsafter1 %}
 	<script src="/vendor/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
 	{% if is_granted('ROLE_CLUB_MANAGER') %}
-    	<script src="/vendor/bootstrap-datepicker/locales/bootstrap-datepicker.fr.min.js" charset="UTF-8"></script>
-    	<script type="text/javascript">
-    		{#
-    		// https://uxsolutions.github.io/bootstrap-datepicker/?markup=input&format=&weekStart=&startDate=&endDate=&startView=0&minViewMode=0&maxViewMode=4&todayBtn=false&clearBtn=false&language=fr&orientation=auto&multidate=&multidateSeparator=&calendarWeeks=on&keyboardNavigation=on&forceParse=on#sandbox
-    		#}
-    		var maxDate = new Date();
-    		maxDate.setFullYear(maxDate.getFullYear() - 2);
-    		var minDate = new Date();
-    		minDate.setFullYear(minDate.getFullYear() - 100);
-    		var startDate = new Date();
-    		startDate.setFullYear(startDate.getFullYear() - 10);
-    		$('#staticBirthday').datepicker({
-    			startDate: minDate,
-    			endDate: maxDate,
-    			defaultViewDate: startDate,
-    			language: 'fr',
-    			calendarWeeks: true
-    		});
-    	</script>
-    {% endif %}
+		<script src="/vendor/bootstrap-datepicker/locales/bootstrap-datepicker.fr.min.js" charset="UTF-8"></script>
+		<script type="text/javascript">
+			{#
+			// https://uxsolutions.github.io/bootstrap-datepicker/?markup=input&format=&weekStart=&startDate=&endDate=&startView=0&minViewMode=0&maxViewMode=4&todayBtn=false&clearBtn=false&language=fr&orientation=auto&multidate=&multidateSeparator=&calendarWeeks=on&keyboardNavigation=on&forceParse=on#sandbox
+			#}
+			var maxDate = new Date();
+			maxDate.setFullYear(maxDate.getFullYear() - 2);
+			var minDate = new Date();
+			minDate.setFullYear(minDate.getFullYear() - 100);
+			var startDate = new Date();
+			startDate.setFullYear(startDate.getFullYear() - 10);
+			$('#staticBirthday').datepicker({
+				startDate: minDate,
+				endDate: maxDate,
+				defaultViewDate: startDate,
+				language: 'fr',
+				calendarWeeks: true
+			});
+		</script>
+	{% endif %}
 	<script src="/assets/user/user.js"></script>
 {% endblock %}
